Forbedre ytelse for opprettelse av tidslinje og for combine