@@ -1,4 +1,12 @@
-package no.nav.fpsak.tidsserie;
+package no.nav.fpsak.tidsserie.gammel;
+
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import no.nav.fpsak.tidsserie.LocalDateInterval;
+import no.nav.fpsak.tidsserie.LocalDateSegment;
+import no.nav.fpsak.tidsserie.LocalDateSegmentCombinator;
+import no.nav.fpsak.tidsserie.StandardCombinators;
+import no.nav.fpsak.tidsserie.json.LocalDateTimelineFormatters;
 
 import java.io.Serializable;
 import java.time.LocalDate;
@@ -7,17 +15,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Map;
 import java.util.NavigableMap;
 import java.util.NavigableSet;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicReference;
@@ -29,32 +34,24 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
-import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-
-import no.nav.fpsak.tidsserie.json.LocalDateTimelineFormatters;
-
 /**
- * En tidslinje bestående av {@link LocalDateSegment}s med [fom, tom] med tilhørende verdi.
- * <p>
- * Tidslinjen bygges av "unordered" og "disjointed" intervaller, men støtter p.t. ikke overlappende intervaller med
- * mindre en {@link LocalDateSegmentCombinator} funksjon angis.
- * <p>
- * Derimot kan to tidsserier kombineres vha. en {@link LocalDateSegmentCombinator} funksjon.
- * <p>
- * API'et er modellert etter metoder fra java.time og threeten-extra Interval.
- *
- * @param <V> Java type for verdier i tidsserien.
+ * Dette er kopi av en eldre versjon av tidslinje (kan byttes til nyere versjon ved behov)
  */
 @JsonSerialize(using = LocalDateTimelineFormatters.Serializer.class)
 @JsonDeserialize(using = LocalDateTimelineFormatters.Deserializer.class)
-public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSegment<V>> {
+public class GammelLocalDateTimeline<V> implements Serializable, Iterable<LocalDateSegment<V>> {
 
     @SuppressWarnings("rawtypes")
-    public static final LocalDateTimeline EMPTY_TIMELINE = new LocalDateTimeline<>(Collections.emptyList());
-    private static final SegmentSplitter<Object> DEFAULT_SEGMENT_SPLITTER = new DefaultSegmentSplitter<>();
-
-    private final List<LocalDateSegment<V>> segments;
+    public static final GammelLocalDateTimeline EMPTY_TIMELINE = new GammelLocalDateTimeline<>(Collections.emptyList());
+    /**
+     * Left-hand side, konstant for håndtere joins mellom tidsserier.
+     */
+    private static final int LHS = 1;
+    /**
+     * Right-hand side.
+     */
+    private static final int RHS = LHS << 1;
+    private final NavigableSet<LocalDateSegment<V>> segments = new TreeSet<>();
     /**
      * Funksjon for å beregne partielle datosegmenter der input interval delvis overlapper segmentets intervall. <br>
      * Begge
@@ -68,7 +65,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      */
     private final SegmentSplitter<V> segmentSplitter;
 
-    public static <V> LocalDateTimeline<V> empty() {
+    public static <V> GammelLocalDateTimeline<V> empty() {
         return EMPTY_TIMELINE;
     }
 
@@ -78,23 +75,23 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @param fomDato - fra dato (fra-og-med)
      * @param tomDato - til dato (til-og-med)
      */
-    public LocalDateTimeline(LocalDate fomDato, LocalDate tomDato, V value) {
+    public GammelLocalDateTimeline(LocalDate fomDato, LocalDate tomDato, V value) {
         this(new LocalDateInterval(fomDato, tomDato), value);
     }
 
     /**
      * Convenience contstructor for å opprette timeline med kun et segment.
      */
-    public LocalDateTimeline(LocalDateInterval datoInterval, V value) {
+    public GammelLocalDateTimeline(LocalDateInterval datoInterval, V value) {
         this(Arrays.asList(new LocalDateSegment<V>(datoInterval, value)));
     }
 
-    public LocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter) {
+    public GammelLocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter) {
         this(datoSegmenter, null, null);
     }
 
-    public LocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter,
-                             SegmentSplitter<V> customSegmentSplitter) {
+    public GammelLocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter,
+                                   SegmentSplitter<V> customSegmentSplitter) {
         this(datoSegmenter, null, customSegmentSplitter);
     }
 
@@ -104,8 +101,8 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @param datoSegmenter     - segmenter i tidsserien
      * @param overlapCombinator - Optional combinator dersom noen segmenter overlapper. Må spesifiseres dersom det er sannsynlig kan skje.
      */
-    public LocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter,
-                             LocalDateSegmentCombinator<V, V, V> overlapCombinator) {
+    public GammelLocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter,
+                                   LocalDateSegmentCombinator<V, V, V> overlapCombinator) {
         this(datoSegmenter, overlapCombinator, null);
     }
 
@@ -116,131 +113,20 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @param overlapCombinator     - Optional combinator dersom noen segmenter overlapper. Må spesifiseres dersom det er sannsynlig kan skje.
      * @param customSegmentSplitter - Optional splitter dersom enkelt segmenter må splittes. Default splittes interval med konstant verdi.
      */
-    public LocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter,
-                             LocalDateSegmentCombinator<V, V, V> overlapCombinator,
-                             SegmentSplitter<V> customSegmentSplitter) {
+    public GammelLocalDateTimeline(Collection<LocalDateSegment<V>> datoSegmenter,
+                                   LocalDateSegmentCombinator<V, V, V> overlapCombinator,
+                                   SegmentSplitter<V> customSegmentSplitter) {
 
         Objects.requireNonNull(datoSegmenter, "datoSegmenter");
-        this.segmentSplitter = customSegmentSplitter != null ? customSegmentSplitter : (SegmentSplitter<V>) DEFAULT_SEGMENT_SPLITTER;
-        if (erCollectionSortertOgIkkeOverlappende(datoSegmenter)) {
-            //veldig vanlig tilfelle. skjer bl.a når resultatet fra combine-metoden dannes
-            segments = new ArrayList<>(datoSegmenter);
-        } else {
-            segments = splittOgHåndterOverlapp(datoSegmenter, segmentSplitter, overlapCombinator);
-            validateNonOverlapping();
+        this.segmentSplitter = customSegmentSplitter != null ? customSegmentSplitter : new EqualValueSegmentSplitter<>();
+        for (LocalDateSegment<V> ds : datoSegmenter) {
+            add(ds, overlapCombinator);
         }
-    }
-
-    private static <V> List<LocalDateSegment<V>> splittOgHåndterOverlapp(Collection<LocalDateSegment<V>> inputSegmenter, SegmentSplitter<V> segmentSplitter, LocalDateSegmentCombinator<V, V, V> overlapCombinator) {
-        List<LocalDateSegment<V>> resultat = new ArrayList<>();
-        ArrayList<LocalDateSegment<V>> inputListe = inputSegmenter instanceof ArrayList<LocalDateSegment<V>> inputSegmentListe ? inputSegmentListe : new ArrayList<>(inputSegmenter);
-        NavigableMap<LocalDate, List<Integer>> segmenterPrStartdato = grupperSegmenter(inputListe, LocalDateSegment::getFom);
-        NavigableMap<LocalDate, List<Integer>> segmenterPrSluttdato = grupperSegmenter(inputListe, LocalDateSegment::getTom);
-
-        NavigableSet<Integer> aktiveSegmenter = new TreeSet<>(); //må være sortert for å bevare rekkfølge av input-segmenter ved kombinering
-        KnekkpunktIterator knekkpunktIterator = new KnekkpunktIterator(segmenterPrStartdato.navigableKeySet(), segmenterPrSluttdato.navigableKeySet());
-        LocalDate fom = knekkpunktIterator.next();
-        while (fom != null && knekkpunktIterator.hasNext()) {
-            boolean pastEndOfTime = knekkpunktIterator.nextIsPastEndOfTime();
-            LocalDate nesteFom = pastEndOfTime ? null : knekkpunktIterator.next();
-            LocalDate tom = pastEndOfTime ? LocalDate.MAX : nesteFom.minusDays(1);
-
-            if (!aktiveSegmenter.isEmpty()) {
-                segmenterPrSluttdato.getOrDefault(fom.minusDays(1), List.of()).forEach(aktiveSegmenter::remove);
-            }
-            aktiveSegmenter.addAll(segmenterPrStartdato.getOrDefault(fom, List.of()));
-            if (!aktiveSegmenter.isEmpty()) {
-                resultat.add(lagSegment(inputListe, aktiveSegmenter, fom, tom, segmentSplitter, overlapCombinator));
-            }
-            fom = nesteFom;
-        }
-        return resultat;
-    }
-
-    private static <V> NavigableMap<LocalDate, List<Integer>> grupperSegmenter(ArrayList<LocalDateSegment<V>> segmenter, Function<LocalDateSegment<V>, LocalDate> grupperPå) {
-        NavigableMap<LocalDate, List<Integer>> grupperte = new TreeMap<>();
-
-        for (int i = 0; i < segmenter.size(); i++) {
-            LocalDateSegment<V> segment = segmenter.get(i);
-            LocalDate nøkkel = grupperPå.apply(segment);
-            List<Integer> startListe = grupperte.get(nøkkel);
-            if (startListe != null) {
-                startListe.add(i);
-            } else {
-                List<Integer> lista = new ArrayList<>();
-                lista.add(i);
-                grupperte.put(nøkkel, lista);
-            }
-        }
-        return grupperte;
-    }
-
-    static final class KnekkpunktIterator {
-        private Iterator<LocalDate> startIterator;
-        private Iterator<LocalDate> sluttIterator;
-
-        private LocalDate nesteStart;
-        private LocalDate nesteSlutt;
-
-        public KnekkpunktIterator(Iterator<LocalDate> startIterator, Iterator<LocalDate> sluttIterator) {
-            this.startIterator = startIterator;
-            this.sluttIterator = sluttIterator;
-
-            nesteStart = startIterator.hasNext() ? startIterator.next() : null;
-            nesteSlutt = sluttIterator.hasNext() ? sluttIterator.next() : null;
-        }
-
-        public KnekkpunktIterator(NavigableSet<LocalDate> startdatoer, NavigableSet<LocalDate> sluttdatoer) {
-            this(startdatoer.iterator(), sluttdatoer.iterator());
-        }
-
-        public boolean nextIsPastEndOfTime() {
-            boolean harFlereStarttidspunkt = startIterator.hasNext();
-            boolean harFlereSluttidspunktFørTidenesEnde = sluttIterator.hasNext() || (!nesteSlutt.equals(LocalDate.MAX));
-            return !harFlereStarttidspunkt && !harFlereSluttidspunktFørTidenesEnde;
-        }
-
-        public LocalDate next() {
-            if (nesteSlutt == null && nesteStart == null) {
-                throw new NoSuchElementException("Ikke flere verdier igjen");
-            }
-            boolean velgStartVerdi = nesteStart != null && (nesteSlutt == null || !nesteStart.isAfter(nesteSlutt));
-            LocalDate valgtDato = velgStartVerdi ? nesteStart : nesteSlutt.plusDays(1);
-            if (nesteStart != null && !nesteStart.isAfter(valgtDato)) {
-                nesteStart = startIterator.hasNext() ? startIterator.next() : null;
-            }
-            if (nesteSlutt != null && nesteSlutt.isBefore(valgtDato)) {
-                nesteSlutt = sluttIterator.hasNext() ? sluttIterator.next() : null;
-            }
-            return valgtDato;
-        }
-
-        public boolean hasNext() {
-            return nesteStart != null || nesteSlutt != null;
-        }
-
-    }
-
-    private static <V> LocalDateSegment<V> lagSegment(ArrayList<LocalDateSegment<V>> inputListe, NavigableSet<Integer> aktiveSegmenter, LocalDate fom, LocalDate tom, SegmentSplitter<V> segmentSplitter, LocalDateSegmentCombinator<V, V, V> overlapCombinator) {
-        if (aktiveSegmenter.size() > 1 && overlapCombinator == null) {
-            throw new IllegalArgumentException("Overlapp ikke tillat uten overlapCombinator");
-        }
-        LocalDateSegment<V> resultat = null;
-        LocalDateInterval intervall = new LocalDateInterval(fom, tom);
-        for (Integer index : aktiveSegmenter) {
-            LocalDateSegment<V> segmentet = inputListe.get(index);
-            LocalDateSegment<V> tilpasset = intervall.equals(segmentet.getLocalDateInterval()) ? segmentet : segmentSplitter.apply(intervall, segmentet);
-            if (resultat == null) {
-                resultat = tilpasset;
-            } else {
-                resultat = overlapCombinator.combine(intervall, resultat, tilpasset);
-            }
-        }
-        return resultat;
+        validateNonOverlapping();
     }
 
     /**
-     * Returnerer ny {@link LocalDateTimeline} som kun består av intervaller som passerer angitt test.
+     * Returnerer ny {@link GammelLocalDateTimeline} som kun består av intervaller som passerer angitt test.
      * <p>
      * NB: Bør sørge for at tidslinjen er 'tettest' mulig før denne kalles (dvs. hvis i tvil, bruke {@link #compress()}
      * først).
@@ -252,7 +138,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @param includeGaps - hvorvidt gaps testes for seg (vil ha null som verdi).
      */
 
-    public LocalDateTimeline<V> collect(CollectSegmentPredicate<V> test, boolean includeGaps) {
+    public GammelLocalDateTimeline<V> collect(CollectSegmentPredicate<V> test, boolean includeGaps) {
 
         class CollectEvaluator implements Consumer<LocalDateSegment<V>> {
 
@@ -269,7 +155,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
         }
 
         CollectEvaluator evaluator = new CollectEvaluator();
-        LocalDateSegment<V> prev = segments.isEmpty() ? null : segments.getFirst();
+        LocalDateSegment<V> prev = segments.isEmpty() ? null : segments.first();
 
         for (LocalDateSegment<V> seg : segments) {
             if (includeGaps && prev != null) {
@@ -284,59 +170,48 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
             evaluator.accept(seg);
             prev = seg;
         }
-        return new LocalDateTimeline<>(evaluator.segmenter);
+        return new GammelLocalDateTimeline<>(evaluator.segmenter);
 
     }
 
     /**
      * Kombinerer denne tidsserien med et enkelt segment (convenience function)
      *
-     * @see #combine(LocalDateTimeline, LocalDateSegmentCombinator, JoinStyle)
+     * @see #combine(GammelLocalDateTimeline, LocalDateSegmentCombinator, JoinStyle)
      */
-    public <T, R> LocalDateTimeline<R> combine(final LocalDateSegment<T> other,
-                                               final LocalDateSegmentCombinator<V, T, R> combinator,
-                                               final JoinStyle combinationStyle) {
-        return combine(new LocalDateTimeline<T>(List.of(other)), combinator, combinationStyle);
+    public <T, R> GammelLocalDateTimeline<R> combine(final LocalDateSegment<T> other,
+                                                     final LocalDateSegmentCombinator<V, T, R> combinator,
+                                                     final JoinStyle combinationStyle) {
+        return combine(new GammelLocalDateTimeline<T>(List.of(other)), combinator, combinationStyle);
     }
+
 
 
     /**
      * Kombinerer to tidslinjer, med angitt combinator funksjon og {@link JoinStyle}.
      */
-    public <T, R> LocalDateTimeline<R> combine(final LocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator, final JoinStyle combinationStyle) {
+    public <T, R> GammelLocalDateTimeline<R> combine(final GammelLocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator, final JoinStyle combinationStyle) {
         List<LocalDateSegment<R>> combinedSegmenter = new ArrayList<>();
         Iterator<LocalDateSegment<V>> lhsIterator = this.segments.iterator();
         Iterator<LocalDateSegment<T>> rhsIterator = other.segments.iterator();
         LocalDateSegment<V> lhs = lhsIterator.hasNext() ? lhsIterator.next() : null;
         LocalDateSegment<T> rhs = rhsIterator.hasNext() ? rhsIterator.next() : null;
-        StartdatoIterator<V, T> startdatoIterator = new StartdatoIterator<>(this.segments, other.segments);
-        SluttdatoIterator<V, T> sluttdatoIterator = new SluttdatoIterator<>(this.segments, other.segments);
-
-        KnekkpunktIterator knekkpunktIterator = new KnekkpunktIterator(startdatoIterator, sluttdatoIterator);
-        if (!knekkpunktIterator.hasNext()) {
+        KnekkpunktIterator<V, T> startdatoIterator = new KnekkpunktIterator<>(this.segments, other.segments);
+        if (!startdatoIterator.hasNext()) {
             return empty(); //begge input-tidslinjer var tomme
         }
 
-        LocalDate fom = knekkpunktIterator.next();
-        while (fom != null && knekkpunktIterator.hasNext()) {
+        long fomEpochDay = startdatoIterator.nextEpochDay();
+        while (startdatoIterator.hasNext()) {
+            LocalDate fom = LocalDate.ofEpochDay(fomEpochDay);
             lhs = spolTil(lhs, lhsIterator, fom);
             rhs = spolTil(rhs, rhsIterator, fom);
 
             boolean harLhs = lhs != null && lhs.getLocalDateInterval().contains(fom);
             boolean harRhs = rhs != null && rhs.getLocalDateInterval().contains(fom);
-
-            boolean maxtime = knekkpunktIterator.nextIsPastEndOfTime();
-            LocalDate neste;
-            LocalDate tom;
-            if (maxtime) {
-                neste = null;
-                tom = LocalDate.MAX;
-            } else {
-                neste = knekkpunktIterator.next();
-                tom = neste.minusDays(1);
-            }
+            long nesteFomEpochDay = startdatoIterator.nextEpochDay();
             if (combinationStyle.accept(harLhs, harRhs)) {
-                LocalDateInterval periode = new LocalDateInterval(fom, tom);
+                LocalDateInterval periode = new LocalDateInterval(fom, LocalDate.ofEpochDay(nesteFomEpochDay - 1));
                 LocalDateSegment<V> tilpassetLhsSegment = tilpassSegment(harLhs, lhs, periode, this.segmentSplitter);
                 LocalDateSegment<T> tilpassetRhsSegment = tilpassSegment(harRhs, rhs, periode, other.segmentSplitter);
                 LocalDateSegment<R> nyVerdi = combinator.combine(periode, tilpassetLhsSegment, tilpassetRhsSegment);
@@ -344,78 +219,16 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
                     combinedSegmenter.add(nyVerdi);
                 }
             }
-            fom = neste;
+            fomEpochDay = nesteFomEpochDay;
         }
-        return new LocalDateTimeline<>(combinedSegmenter);
-    }
-
-    static class StartdatoIterator<T, V> implements Iterator<LocalDate> {
-        private final Iterator<LocalDateSegment<T>> lhsIterator;
-        private final Iterator<LocalDateSegment<V>> rhsIterator;
-        private LocalDate lhsDato;
-        private LocalDate rhsDato;
-
-        public StartdatoIterator(Collection<LocalDateSegment<T>> lhs, Collection<LocalDateSegment<V>> rhs) {
-            lhsIterator = lhs.iterator();
-            rhsIterator = rhs.iterator();
-            lhsDato = lhsIterator.hasNext() ? lhsIterator.next().getFom() : null;
-            rhsDato = rhsIterator.hasNext() ? rhsIterator.next().getFom() : null;
-        }
-
-        @Override
-        public boolean hasNext() {
-            return lhsDato != null || rhsDato != null;
-        }
-
-        @Override
-        public LocalDate next() {
-            LocalDate neste = (lhsDato != null && (rhsDato == null || lhsDato.isBefore(rhsDato))) ? lhsDato : rhsDato;
-            while (lhsDato != null && !lhsDato.isAfter(neste)) {
-                lhsDato = lhsIterator.hasNext() ? lhsIterator.next().getFom() : null;
-            }
-            while (rhsDato != null && !rhsDato.isAfter(neste)) {
-                rhsDato = rhsIterator.hasNext() ? rhsIterator.next().getFom() : null;
-            }
-            return neste;
-        }
-    }
-
-    static class SluttdatoIterator<T, V> implements Iterator<LocalDate> {
-        private final Iterator<LocalDateSegment<T>> lhsIterator;
-        private final Iterator<LocalDateSegment<V>> rhsIterator;
-        private LocalDate lhsDato;
-        private LocalDate rhsDato;
-
-        public SluttdatoIterator(Collection<LocalDateSegment<T>> lhs, Collection<LocalDateSegment<V>> rhs) {
-            lhsIterator = lhs.iterator();
-            rhsIterator = rhs.iterator();
-            lhsDato = lhsIterator.hasNext() ? lhsIterator.next().getTom() : null;
-            rhsDato = rhsIterator.hasNext() ? rhsIterator.next().getTom() : null;
-        }
-
-        @Override
-        public boolean hasNext() {
-            return lhsDato != null || rhsDato != null;
-        }
-
-        @Override
-        public LocalDate next() {
-            LocalDate neste = (lhsDato != null && (rhsDato == null || lhsDato.isBefore(rhsDato))) ? lhsDato : rhsDato;
-            while (lhsDato != null && !lhsDato.isAfter(neste)) {
-                lhsDato = lhsIterator.hasNext() ? lhsIterator.next().getTom() : null;
-            }
-            while (rhsDato != null && !rhsDato.isAfter(neste)) {
-                rhsDato = rhsIterator.hasNext() ? rhsIterator.next().getTom() : null;
-            }
-            return neste;
-        }
+        return new GammelLocalDateTimeline<>(combinedSegmenter);
     }
 
     private static <X> LocalDateSegment<X> tilpassSegment(boolean harSegment, LocalDateSegment<X> segment, LocalDateInterval ønsketIntervall, SegmentSplitter<X> segmentSplitter) {
         if (!harSegment) {
             return null;
         }
-        if (segment.getLocalDateInterval().equals(ønsketIntervall)) {
+        if (segment.getLocalDateInterval().equals(ønsketIntervall)){
             return segment;
         }
         return segmentSplitter.apply(ønsketIntervall, segment);
@@ -425,12 +238,12 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * Fikser opp tidslinjen slik at tilgrensende intervaller med equal verdi får et sammenhengende intervall. Nyttig
      * for å 'redusere' tidslinjen ned til enkleste form før lagring etc.
      */
-    public LocalDateTimeline<V> compress() {
-        var factory = new CompressorFactory<V>(LocalDateInterval::abuts, Objects::equals, StandardCombinators::leftOnly);
+    public GammelLocalDateTimeline<V> compress() {
+        var factory = new CompressorFactory<V>(Objects::equals, (i, lhs, rhs) -> new LocalDateSegment<>(i, lhs.getValue()));
         TimelineCompressor<V> compressor = segments.stream()
                 .collect(factory::get, TimelineCompressor::accept, TimelineCompressor::combine);
 
-        return new LocalDateTimeline<>(compressor.segmenter);
+        return new GammelLocalDateTimeline<>(compressor.segmenter);
     }
 
     /**
@@ -439,33 +252,18 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @param e - likhetspredikat for å sammenligne to segment som vurderes slått sammen
      * @param c - combinator for å slå sammen to tids-abut-segmenter som oppfyller e
      */
-    public LocalDateTimeline<V> compress(BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
-        var factory = new CompressorFactory<>(LocalDateInterval::abuts, e, c);
+    public GammelLocalDateTimeline<V> compress(BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
+        var factory = new CompressorFactory<>(e, c);
         TimelineCompressor<V> compressor = segments.stream()
                 .collect(factory::get, TimelineCompressor::accept, TimelineCompressor::combine);
 
-        return new LocalDateTimeline<>(compressor.segmenter);
-    }
-
-    /**
-     * Fikser opp tidslinjen ved å slå sammen sammenhengende intervall med "like" verider utover periode.
-     *
-     * @param a - predikat for å vurdere om to intervaller ligger inntil hverandre (helg og helligdag)
-     * @param e - likhetspredikat for å sammenligne to segment som vurderes slått sammen
-     * @param c - combinator for å slå sammen to tids-abut-segmenter som oppfyller e
-     */
-    public LocalDateTimeline<V> compress(BiPredicate<LocalDateInterval, LocalDateInterval> a, BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
-        var factory = new CompressorFactory<>(a, e, c);
-        TimelineCompressor<V> compressor = segments.stream()
-                .collect(factory::get, TimelineCompressor::accept, TimelineCompressor::combine);
-
-        return new LocalDateTimeline<>(compressor.segmenter);
+        return new GammelLocalDateTimeline<>(compressor.segmenter);
     }
 
     /**
      * Returnerer timeline der enten denne eller andre (eller begge) har verdier.
      */
-    public <T, R> LocalDateTimeline<R> crossJoin(LocalDateTimeline<T> other, LocalDateSegmentCombinator<V, T, R> combinator) {
+    public <T, R> GammelLocalDateTimeline<R> crossJoin(GammelLocalDateTimeline<T> other, LocalDateSegmentCombinator<V, T, R> combinator) {
         return combine(other, combinator, JoinStyle.CROSS_JOIN);
     }
 
@@ -475,8 +273,8 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      *
      * @return new timeline without given interval.
      */
-    public LocalDateTimeline<V> disjoint(LocalDateInterval datoInterval) {
-        LocalDateTimeline<V> intervalTimeline = new LocalDateTimeline<>(Arrays.asList(new LocalDateSegment<V>(datoInterval, null)));
+    public GammelLocalDateTimeline<V> disjoint(LocalDateInterval datoInterval) {
+        GammelLocalDateTimeline<V> intervalTimeline = new GammelLocalDateTimeline<>(Arrays.asList(new LocalDateSegment<V>(datoInterval, null)));
         return this.disjoint(intervalTimeline, StandardCombinators::leftOnly);
     }
 
@@ -484,7 +282,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * Splitter timeline i intervaller fra #startDate inntil #endDate med angitt periode.
      * NB: vær forsiktig dersom det er åpen intervaller (tidenes ende, {@link LocalDate#MIN}, {@link LocalDate#MAX} el.
      */
-    public LocalDateTimeline<V> splitAtRegular(LocalDate startDate, LocalDate endDate, Period period) {
+    public GammelLocalDateTimeline<V> splitAtRegular(LocalDate startDate, LocalDate endDate, Period period) {
 
         if (LocalDate.MIN.equals(startDate) || LocalDate.MAX.equals(endDate) || endDate.isBefore(startDate)) {
             throw new IllegalArgumentException(String.format("kan ikke periodisere tidslinjen mellom angitte datoer: [%s, %s]", startDate, endDate));
@@ -503,20 +301,20 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
             dt = nextDt;
         }
 
-        return new LocalDateTimeline<>(segmenter);
+        return new GammelLocalDateTimeline<>(segmenter);
     }
 
     /**
      * Returnerer kun intervaller der denne timeline har verdier, men andre ikke har det.
      */
-    public <T, R> LocalDateTimeline<R> disjoint(LocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator) {
+    public <T, R> GammelLocalDateTimeline<R> disjoint(GammelLocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator) {
         return combine(other, combinator, JoinStyle.DISJOINT);
     }
 
     /**
      * Returnerer kun intervaller der denne timeline har verdier, men andre ikke har det.
      */
-    public <T> LocalDateTimeline<V> disjoint(LocalDateTimeline<T> other) {
+    public <T> GammelLocalDateTimeline<V> disjoint(GammelLocalDateTimeline<T> other) {
         final LocalDateSegmentCombinator<V, T, V> combinator = StandardCombinators::leftOnly;
         return this.disjoint(other, combinator);
     }
@@ -530,26 +328,16 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
             return false;
         }
         @SuppressWarnings("rawtypes")
-        LocalDateTimeline other = (LocalDateTimeline) obj;
-        if (size() != other.size()) {
-            return false;
-        }
+        GammelLocalDateTimeline other = (GammelLocalDateTimeline) obj;
 
-        Iterator<LocalDateSegment<V>> iteratorA = segments.iterator();
-        @SuppressWarnings("rawtypes")
-        Iterator<LocalDateSegment> iteratorB = other.segments.iterator();
-        while (iteratorA.hasNext()) {
-            if (!Objects.equals(iteratorA.next(), iteratorB.next())) {
-                return false;
-            }
-        }
-        return true;
+        // bruk HashSet til equals slik at vi slipper forstyrrelse pga segments#compareTo (som ikke tar hensyn til verdi)
+        return Objects.equals(new HashSet<>(segments), new HashSet<>(other.segments));
     }
 
     /**
      * Filter timeline based on a predicate on value.
      */
-    public LocalDateTimeline<V> filterValue(Predicate<V> predicate) {
+    public GammelLocalDateTimeline<V> filterValue(Predicate<V> predicate) {
         return collect((akseptert, ny, foregående, påfølgende) -> predicate.test(ny.getValue()), false);
     }
 
@@ -576,22 +364,14 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
         if (isEmpty()) {
             throw new IllegalStateException("Timeline is empty"); //$NON-NLS-1$
         }
-        if (segments instanceof ArrayList<LocalDateSegment<V>> segmenterSomListe) {
-            return segmenterSomListe.get(segmenterSomListe.size() - 1).getTom();
-        }
-        throw new IllegalArgumentException("segments var av ikke-støttet type " + segments.getClass());
-
+        return segments.last().getTom();
     }
 
     public LocalDate getMinLocalDate() {
         if (isEmpty()) {
             throw new IllegalStateException("Timeline is empty"); //$NON-NLS-1$
         }
-        if (segments instanceof ArrayList<LocalDateSegment<V>> segmenterSomListe) {
-            return segmenterSomListe.get(0).getFom();
-        }
-        throw new IllegalArgumentException("segments var av ikke-støttet type " + segments.getClass());
-
+        return segments.first().getFom();
     }
 
     public LocalDateSegment<V> getSegment(LocalDateInterval datoInterval) {
@@ -615,8 +395,8 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     /**
      * Intersection of this timeline and given interval.
      */
-    public LocalDateTimeline<V> intersection(LocalDateInterval datoInterval) {
-        LocalDateTimeline<V> intervalTimeline = new LocalDateTimeline<>(Arrays.asList(new LocalDateSegment<V>(datoInterval, null)));
+    public GammelLocalDateTimeline<V> intersection(LocalDateInterval datoInterval) {
+        GammelLocalDateTimeline<V> intervalTimeline = new GammelLocalDateTimeline<>(Arrays.asList(new LocalDateSegment<V>(datoInterval, null)));
         return this.intersection(intervalTimeline, StandardCombinators::leftOnly);
     }
 
@@ -624,21 +404,21 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * Kombinerer to tidsserier, tar verdier fra begge KUN dersom begge intervaller matcher. (bruker {@link JoinStyle#INNER_JOIN}.
      * Combinator må håndtere sammenstilling av verdi fra begge.
      */
-    public <T, R> LocalDateTimeline<R> intersection(LocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator) {
+    public <T, R> GammelLocalDateTimeline<R> intersection(GammelLocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator) {
         return combine(other, combinator, JoinStyle.INNER_JOIN);
     }
 
     /**
      * Intersection av to tidsserier, returnerer kun dennes tidsseriens verdier ved match.
      */
-    public <T> LocalDateTimeline<V> intersection(LocalDateTimeline<T> other) {
+    public <T> GammelLocalDateTimeline<V> intersection(GammelLocalDateTimeline<T> other) {
         return combine(other, StandardCombinators::leftOnly, JoinStyle.INNER_JOIN);
     }
 
     /**
      * Intersection av to tidsserier, returnerer ene eller andres verdier (men aldri begges). Ved match returneres dennes verdi.
      */
-    public LocalDateTimeline<V> crossJoin(LocalDateTimeline<V> other) {
+    public GammelLocalDateTimeline<V> crossJoin(GammelLocalDateTimeline<V> other) {
         if (this.isEmpty()) {
             return other;
         } else if (other.isEmpty()) {
@@ -647,8 +427,8 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
         return combine(other, StandardCombinators::coalesceLeftHandSide, JoinStyle.CROSS_JOIN);
     }
 
-    public <T> boolean intersects(LocalDateTimeline<T> other) {
-        LocalDateTimeline<V> intersection = intersection(other, (LocalDateInterval di, LocalDateSegment<V> v, LocalDateSegment<T> t) -> v);
+    public <T> boolean intersects(GammelLocalDateTimeline<T> other) {
+        GammelLocalDateTimeline<V> intersection = intersection(other, (LocalDateInterval di, LocalDateSegment<V> v, LocalDateSegment<T> t) -> v);
         return !intersection.isEmpty();
     }
 
@@ -656,7 +436,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * Kombinerer to tidsserier, tar verdier fra begge uansett om intervaller matcher. (bruker {@link JoinStyle#CROSS_JOIN}.
      * Combinator må håndtere sammenstilling av verdi ved overlapp og dersom ene eller andre har verdi.
      */
-    public <T, R> LocalDateTimeline<R> union(LocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator) {
+    public <T, R> GammelLocalDateTimeline<R> union(GammelLocalDateTimeline<T> other, final LocalDateSegmentCombinator<V, T, R> combinator) {
         return combine(other, combinator, JoinStyle.CROSS_JOIN);
     }
 
@@ -666,11 +446,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @return true if continuous
      */
     public boolean isContinuous() {
-        return isContinuous(LocalDateInterval::abuts);
-    }
-
-    public boolean isContinuous(BiPredicate<LocalDateInterval, LocalDateInterval> abuts) {
-        return firstDiscontinuity(abuts) == null;
+        return firstDiscontinuity() == null;
     }
 
     /**
@@ -679,10 +455,6 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @return null if continuous, first interval
      */
     public LocalDateInterval firstDiscontinuity() {
-        return firstDiscontinuity(LocalDateInterval::abuts);
-    }
-
-    public LocalDateInterval firstDiscontinuity(BiPredicate<LocalDateInterval, LocalDateInterval> abuts) {
         if (segments.size() == 1) {
             return null;
         }
@@ -690,7 +462,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
         LocalDateInterval lastInterval = null;
         for (LocalDateSegment<V> entry : segments) {
             if (lastInterval != null) {
-                if (!abuts.test(lastInterval, entry.getLocalDateInterval())) {
+                if (!lastInterval.abuts(entry.getLocalDateInterval())) {
                     return new LocalDateInterval(lastInterval.getTomDato().plusDays(1), entry.getLocalDateInterval().getFomDato().minusDays(1));
                 }
             }
@@ -705,7 +477,7 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
      * @return true if continuous and not empty for whole matchInterval
      */
     public boolean isContinuous(LocalDateInterval matchInterval) {
-        LocalDateTimeline<V> intersection = this.intersection(matchInterval);
+        GammelLocalDateTimeline<V> intersection = this.intersection(matchInterval);
         return !intersection.isEmpty() && intersection.isContinuous()
                 && Objects.equals(intersection.getMinLocalDate(), matchInterval.getFomDato())
                 && Objects.equals(intersection.getMaxLocalDate(), matchInterval.getTomDato());
@@ -718,28 +490,28 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     /**
      * Map each segment to one or more segments. Can be used to split a timeline for example by a custom function.
      */
-    public <R> LocalDateTimeline<R> map(Function<LocalDateSegment<V>, List<LocalDateSegment<R>>> mapper) {
+    public <R> GammelLocalDateTimeline<R> map(Function<LocalDateSegment<V>, List<LocalDateSegment<R>>> mapper) {
         NavigableSet<LocalDateSegment<R>> newSegments = new TreeSet<>();
         segments.forEach(s -> newSegments.addAll(mapper.apply(s)));
-        return new LocalDateTimeline<R>(newSegments);
+        return new GammelLocalDateTimeline<R>(newSegments);
     }
 
     /**
      * Map each value to a new value given the specified mapping function.
      */
-    public <R> LocalDateTimeline<R> mapValue(Function<V, R> mapper) {
+    public <R> GammelLocalDateTimeline<R> mapValue(Function<V, R> mapper) {
         NavigableSet<LocalDateSegment<R>> newSegments = new TreeSet<>();
         segments.forEach(s -> newSegments.add(new LocalDateSegment<R>(s.getLocalDateInterval(), mapper.apply(s.getValue()))));
-        return new LocalDateTimeline<>(newSegments);
+        return new GammelLocalDateTimeline<>(newSegments);
     }
 
     /**
      * Map each value to a new value given the specified mapping function.
      */
-    public <R> LocalDateTimeline<R> mapSegment(Function<V, R> mapper) {
+    public <R> GammelLocalDateTimeline<R> mapSegment(Function<V, R> mapper) {
         NavigableSet<LocalDateSegment<R>> newSegments = new TreeSet<>();
         segments.forEach(s -> newSegments.add(new LocalDateSegment<R>(s.getLocalDateInterval(), mapper.apply(s.getValue()))));
-        return new LocalDateTimeline<>(newSegments);
+        return new GammelLocalDateTimeline<>(newSegments);
     }
 
     /**
@@ -760,24 +532,15 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
 
     /**
      * Get defensive copy of all segments.
-     *
-     * @deprecated Bytt til segmenter() istedet
      */
-    @Deprecated(forRemoval = true) //bruk segmenter() istedet
     public NavigableSet<LocalDateSegment<V>> toSegments() {
-        return Collections.unmodifiableNavigableSet(new TreeSet<>(segments));
+        return Collections.unmodifiableNavigableSet(segments);
     }
-
-    public Collection<LocalDateSegment<V>> segmenter() {
-        return Collections.unmodifiableCollection(segments);
-    }
-
 
     @Override
     public Iterator<LocalDateSegment<V>> iterator() {
-        return segmenter().iterator();
+        return toSegments().iterator();
     }
-
 
     public Stream<LocalDateSegment<V>> stream() {
         return segments.stream();
@@ -786,11 +549,20 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     /**
      * Find timeline of unique segments in collection of segments that may overlap.
      */
-    public static <V> no.nav.fpsak.tidsserie.LocalDateTimeline<List<V>> buildGroupOverlappingSegments(Collection<LocalDateSegment<V>> segmentsWithPossibleOverlaps) {
-        List<LocalDateSegment<List<V>>> mappedSegments = segmentsWithPossibleOverlaps.stream()
-                .map(s -> new LocalDateSegment<>(s.getLocalDateInterval(), List.of(s.getValue())))
-                .toList();
-        return new LocalDateTimeline<>(mappedSegments, StandardCombinators::concatLists);
+    public static <V> GammelLocalDateTimeline<List<V>> buildGroupOverlappingSegments(Collection<LocalDateSegment<V>> segmentsWithPossibleOverlaps) {
+        @SuppressWarnings({"cast"})
+        var uniqueSegments = segmentsWithPossibleOverlaps.stream().map(s -> new LocalDateSegment<>(s.getLocalDateInterval(), (List<V>) new ArrayList<V>()))
+                .collect(Collectors.toList());
+        var uniqueIntervalTimeline = new GammelLocalDateTimeline<>(uniqueSegments, (interval, lhs, rhs) -> new LocalDateSegment<>(interval, new ArrayList<V>()));
+
+        for (var per : uniqueIntervalTimeline.toSegments()) {
+            for (var seg : segmentsWithPossibleOverlaps) {
+                if (seg.getLocalDateInterval().overlaps(per.getLocalDateInterval())) {
+                    per.getValue().add(seg.getValue());
+                }
+            }
+        }
+        return uniqueIntervalTimeline;
     }
 
     @Override
@@ -804,10 +576,146 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     }
 
     /**
+     * Add segment to timeline. Validate overlapping. If overlap found use given combinator to handle, or abort if not specified.
+     */
+    private boolean add(LocalDateSegment<V> datoSegment, LocalDateSegmentCombinator<V, V, V> overlapCombinator) {
+        if (segments.isEmpty()) {
+            // tomt sett
+            segments.add(datoSegment);
+            return true;
+        } else {
+            LocalDateInterval datoInterval = datoSegment.getLocalDateInterval();
+            if (this.isTimelineOutsideInterval(datoInterval)) {
+                segments.add(datoSegment);
+                return true;
+            } else {
+                if (!isTimelineOverlappingWithSegment(datoSegment)) {
+                    segments.add(datoSegment);
+                } else if (overlapCombinator == null) {
+                    throw new IllegalArgumentException(String.format("Overlapp %s: %s", datoSegment, this));
+                } else {
+                    addWhenOverlap(datoSegment, overlapCombinator, datoInterval);
+                }
+                return true;
+            }
+        }
+
+    }
+
+    /**
      * Quick check to see if interval is completely outside timeline. (avoids testing each segment)
      */
     public boolean isTimelineOutsideInterval(LocalDateInterval datoInterval) {
-        return datoInterval.getFomDato().isAfter(this.getMaxLocalDate()) || datoInterval.getTomDato().isBefore(this.getMinLocalDate());
+        return !(datoInterval.getFomDato().isBefore(this.getMaxLocalDate().plusDays(1))
+                && datoInterval.getTomDato().isAfter(this.getMinLocalDate().minusDays(1)));
+    }
+
+    private void addWhenOverlap(LocalDateSegment<V> datoSegment, LocalDateSegmentCombinator<V, V, V> overlapCombinator, LocalDateInterval datoInterval) {
+        List<LocalDateSegment<V>> newSegments = new ArrayList<>();
+
+        for (LocalDateSegment<V> segEntry : segments) {
+            if (segEntry.overlapper(datoSegment)) {
+                LocalDateInterval segInterval = segEntry.getLocalDateInterval();
+
+                // handle intervals which exist but do not overlap with new
+                segInterval.except(datoInterval)
+                        .forEach(di -> newSegments.add(segmentSplitter.apply(di, segEntry)));
+
+                // handle gap in existing series when new has a value
+                handleGapInExistingTimeline(datoSegment, datoInterval, newSegments, segEntry);
+
+                // handle overlap between existing and new value
+                Optional<LocalDateInterval> segOverlap = segInterval.overlap(datoInterval);
+                LocalDateInterval segOverlappInterval = segOverlap.orElseThrow(() -> new IllegalArgumentException(
+                        String.format("Utvikler-feil: intervall overlapper ikke : %s - %s", segInterval, datoInterval)));
+
+                newSegments.add(overlapCombinator.combine(segOverlappInterval, segEntry, datoSegment));
+            } else {
+                newSegments.add(segEntry);
+            }
+        }
+        segments.clear();
+        segments.addAll(newSegments);
+    }
+
+    private void handleGapInExistingTimeline(LocalDateSegment<V> datoSegment, LocalDateInterval datoInterval, List<LocalDateSegment<V>> newSegments,
+                                             LocalDateSegment<V> segEntry) {
+        LocalDateSegment<V> nesteSegment = segments.higher(segEntry);
+        LocalDateSegment<V> forrigeSegment = segments.lower(segEntry);
+
+        LocalDateInterval gapBak = null;
+        LocalDateInterval gapForan = null;
+        if (nesteSegment == null && datoInterval.getTomDato().isAfter(segEntry.getTom())) {
+            gapBak = new LocalDateInterval(segEntry.getTom().plusDays(1), datoInterval.getTomDato());
+        } else if (nesteSegment != null && !nesteSegment.getFom().isEqual(segEntry.getTom().plusDays(1))) {
+            gapBak = new LocalDateInterval(segEntry.getTom().plusDays(1), nesteSegment.getFom().minusDays(1));
+        }
+
+        if (forrigeSegment == null && datoInterval.getFomDato().isBefore(segEntry.getFom())) {
+            gapForan = new LocalDateInterval(datoInterval.getFomDato(), segEntry.getFom().minusDays(1));
+        } else if (forrigeSegment != null && !forrigeSegment.getTom().isEqual(segEntry.getFom().minusDays(1))) {
+            gapForan = new LocalDateInterval(forrigeSegment.getTom().plusDays(1), segEntry.getFom().minusDays(1));
+        }
+
+        if (gapBak != null) {
+            Optional<LocalDateInterval> overlap = datoInterval.overlap(gapBak);
+            overlap.ifPresent(di -> newSegments.add(new LocalDateSegment<V>(di, datoSegment.getValue())));
+        }
+        if (gapForan != null) {
+            Optional<LocalDateInterval> overlap = datoInterval.overlap(gapForan);
+            overlap.ifPresent(di -> newSegments.add(new LocalDateSegment<V>(di, datoSegment.getValue())));
+        }
+    }
+
+    /**
+     * Get list of unique intervals, handling overlaps if necessary.
+     */
+    private NavigableSet<LocalDateInterval> combineAllUniqueIntervals(NavigableSet<LocalDateInterval> lhsIntervaller,
+                                                                      NavigableSet<LocalDateInterval> rhsIntervaller) {
+
+        if (lhsIntervaller.isEmpty()) {
+            return rhsIntervaller;
+        } else if (rhsIntervaller.isEmpty()) {
+            return lhsIntervaller;
+        }
+
+        List<LocalDateInterval> unmergedIntervals = new ArrayList<>(lhsIntervaller);
+        unmergedIntervals.addAll(rhsIntervaller);
+
+        NavigableSet<LocalDateInterval> result = new TreeSet<>();
+
+        List<LocalDateInterval> intervals = new ArrayList<>(unmergedIntervals);
+        Collections.sort(intervals, LocalDateInterval.ORDER_INTERVALS);
+
+        for (LocalDateInterval interval : intervals) {
+            if (result.isEmpty()) {
+                result.add(interval);
+            } else {
+
+                List<LocalDateInterval> overlapped = new ArrayList<>();
+                List<LocalDateInterval> split = result.stream()
+                        .filter(i -> {
+                            boolean ret = i.overlaps(interval);
+                            if (ret) {
+                                overlapped.add(i);
+                            }
+                            return ret;
+                        })
+                        .flatMap(i -> i.splitAll(interval).stream())
+                        .collect(Collectors.toList());
+
+                if (split.isEmpty()) {
+                    result.add(interval);
+                } else {
+                    result.removeAll(overlapped);
+                    result.addAll(split);
+                }
+
+            }
+
+        }
+
+        return result;
     }
 
     private Optional<LocalDateSegment<V>> findOverlappingValue(LocalDateInterval datoInterval) {
@@ -815,6 +723,113 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
             return Optional.empty();
         }
         return segments.stream().filter(s -> s.getLocalDateInterval().overlaps(datoInterval)).findFirst();
+    }
+
+    private boolean isTimelineOverlappingWithSegment(LocalDateSegment<V> datoSegment) {
+        if (isEmpty()) {
+            return false;
+        }
+        // sjekk for overlapp
+        Optional<LocalDateSegment<V>> overlappingSegment = findOverlappingValue(datoSegment.getLocalDateInterval());
+
+        return (overlappingSegment.isPresent());
+    }
+
+    private NavigableMap<LocalDateInterval, Integer> joinLocalDateIntervals(NavigableSet<LocalDateInterval> lhsIntervaller,
+                                                                            NavigableSet<LocalDateInterval> rhsIntervaller) {
+
+        NavigableMap<LocalDateInterval, Integer> joined = new TreeMap<>();
+
+        NavigableSet<LocalDateInterval> alleIntervaller = combineAllUniqueIntervals(lhsIntervaller, rhsIntervaller);
+
+        for (LocalDateInterval datoInterval : alleIntervaller) {
+            boolean lhsMatch = lhsIntervaller.stream().anyMatch(lhs -> lhs.contains(datoInterval));
+            boolean rhsMatch = rhsIntervaller.stream().anyMatch(rhs -> rhs.contains(datoInterval));
+
+            int combinedFlags = (lhsMatch ? LHS : 0) | (rhsMatch ? RHS : 0);
+
+            if (combinedFlags != 0) {
+                joined.put(datoInterval, combinedFlags);
+            }
+        }
+
+        return joined;
+    }
+
+
+
+    /**
+     * Finner alle knekkpunkter fra to tidslinjer, i sekvens.
+     * <p>
+     * Knekkpunkter er 'start av et intervall' og 'dagen etter slutt av et intervall'. Sistnevnte fordi det da kan være starten på et nytt intervall
+     *
+     * Hvis slutt av intervall er LocalDate.MAX, er dagen etter ikke representerbar i LocalDate, derfor bruker denne klassen epochDay istedet
+     */
+    private static class KnekkpunktIterator<V, T> {
+        private final Iterator<LocalDateSegment<V>> lhsIterator;
+        private final Iterator<LocalDateSegment<T>> rhsIterator;
+        private LocalDateSegment<V> lhsSegment;
+        private LocalDateSegment<T> rhsSegment;
+        private Long next;
+
+        public KnekkpunktIterator(NavigableSet<LocalDateSegment<V>> lhsIntervaller, NavigableSet<LocalDateSegment<T>> rhsIntervaller) {
+            lhsIterator = lhsIntervaller.iterator();
+            rhsIterator = rhsIntervaller.iterator();
+            lhsSegment = lhsIterator.hasNext() ? lhsIterator.next() : null;
+            rhsSegment = rhsIterator.hasNext() ? rhsIterator.next() : null;
+
+            next = lhsSegment != null ? lhsSegment.getFom().toEpochDay() : null;
+            if (rhsSegment != null && (next == null || rhsSegment.getFom().toEpochDay() < next)) {
+                next = rhsSegment.getFom().toEpochDay();
+            }
+        }
+
+        public long nextEpochDay() {
+            if (next == null) {
+                throw new NoSuchElementException("Ikke flere verdier igjen");
+            }
+            long denne = next;
+            oppdaterNeste();
+            return denne;
+        }
+
+        public boolean hasNext() {
+            return next != null;
+        }
+
+        private void oppdaterNeste() {
+            spolUnderliggendeIteratorer();
+
+            Long forrige = next;
+            next = null;
+            //neste knekkpunkt kan komme fra hvilken som helst av de to tidsseriene, må sjekke begge
+            oppdaterNeste(forrige, lhsSegment);
+            oppdaterNeste(forrige, rhsSegment);
+        }
+
+        private void spolUnderliggendeIteratorer() {
+            while (lhsSegment != null && lhsSegment.getTom().toEpochDay() < next) {
+                lhsSegment = lhsIterator.hasNext() ? lhsIterator.next() : null;
+            }
+            while (rhsSegment != null && rhsSegment.getTom().toEpochDay() < next) {
+                rhsSegment = rhsIterator.hasNext() ? rhsIterator.next() : null;
+            }
+        }
+
+        private <X> void oppdaterNeste(Long forrige, LocalDateSegment<X> segment) {
+            if (segment == null) {
+                return; //underliggende iterator er tømt
+            }
+            long fomKandidat = segment.getFom().toEpochDay();
+            if (fomKandidat > forrige && (next == null || fomKandidat < next)) {
+                next = fomKandidat;
+            } else {
+                long tomKandidat = segment.getTom().toEpochDay() + 1;
+                if (tomKandidat > forrige && (next == null || tomKandidat < next)) {
+                    next = tomKandidat;
+                }
+            }
+        }
     }
 
     private static <V> LocalDateSegment<V> spolTil(LocalDateSegment<V> intervall, Iterator<LocalDateSegment<V>> iterator, LocalDate fom) {
@@ -834,17 +849,6 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
             }
             last = seg;
         }
-    }
-
-    private static <X> boolean erCollectionSortertOgIkkeOverlappende(Collection<LocalDateSegment<X>> segmenter) {
-        LocalDateSegment<X> last = null;
-        for (LocalDateSegment<X> segment : segmenter) {
-            if (last != null && !segment.getFom().isAfter(last.getTom())) {
-                return false;
-            }
-            last = segment;
-        }
-        return true;
     }
 
     /**
@@ -928,27 +932,13 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     public interface SegmentSplitter<V> extends BiFunction<LocalDateInterval, LocalDateSegment<V>, LocalDateSegment<V>> {
     }
 
-    /**
-     * Segment splitter som oppretter ny collection for støttede typer dersom verdien er en collection. Ellers som EqualValueSegmentSplitter.
-     */
-    private static final class DefaultSegmentSplitter<V> implements SegmentSplitter<V>, Serializable {
+    private static final class EqualValueSegmentSplitter<V> implements SegmentSplitter<V>, Serializable {
         @Override
         public LocalDateSegment<V> apply(LocalDateInterval di, LocalDateSegment<V> seg) {
             if (di.equals(seg.getLocalDateInterval())) {
                 return seg;
             } else {
-                if(seg.getValue() instanceof List) {
-                    return new LocalDateSegment<>(di, (V) new ArrayList<>((List<?>) seg.getValue()));
-                } else if(seg.getValue() instanceof Set) {
-                    return new LocalDateSegment<>(di, (V) new HashSet<>((Set<?>) seg.getValue()));
-                } else if(seg.getValue() instanceof Map) {
-                    return new LocalDateSegment<>(di, (V) new HashMap<>((Map<?, ?>) seg.getValue()));
-                } else if(seg.getValue() instanceof Collection) {
-                    throw new IllegalArgumentException(String.format("Collection type %s is not supported for default segment splitter", seg.getValue().getClass().getName()));
-                }
-                else {
-                    return new LocalDateSegment<>(di, seg.getValue());
-                }
+                return new LocalDateSegment<V>(di, seg.getValue());
             }
         }
     }
@@ -960,12 +950,10 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     static class TimelineCompressor<V> implements Consumer<LocalDateSegment<V>> {
 
         private final NavigableSet<LocalDateSegment<V>> segmenter = new TreeSet<>();
-        private final BiPredicate<LocalDateInterval, LocalDateInterval> abuts;
         private final BiPredicate<V, V> equals;
         private final LocalDateSegmentCombinator<V, V, V> combinator;
 
-        TimelineCompressor(BiPredicate<LocalDateInterval, LocalDateInterval> a, BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
-            this.abuts = a;
+        TimelineCompressor(BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
             this.equals = e;
             this.combinator = c;
         }
@@ -976,11 +964,11 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
                 segmenter.add(t);
             } else {
                 LocalDateSegment<V> last = segmenter.last();
-                if (abuts.test(last.getLocalDateInterval(), t.getLocalDateInterval())
+                if (last.getLocalDateInterval().abuts(t.getLocalDateInterval())
                         && equals.test(last.getValue(), t.getValue())) {
                     // bytt ut og ekspander intervall for siste
                     segmenter.remove(last);
-                    LocalDateInterval expandedInterval = last.getLocalDateInterval().expand(t.getLocalDateInterval(), abuts);
+                    LocalDateInterval expandedInterval = last.getLocalDateInterval().expand(t.getLocalDateInterval());
                     segmenter.add(new LocalDateSegment<>(expandedInterval, combinator.combine(expandedInterval, last, t).getValue()));
                 } else {
                     segmenter.add(t);
@@ -995,18 +983,16 @@ public class LocalDateTimeline<V> implements Serializable, Iterable<LocalDateSeg
     }
 
     static class CompressorFactory<V> {
-        private final BiPredicate<LocalDateInterval, LocalDateInterval> abuts;
         private final BiPredicate<V, V> equals;
         private final LocalDateSegmentCombinator<V, V, V> combinator;
 
-        CompressorFactory(BiPredicate<LocalDateInterval, LocalDateInterval> a, BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
-            this.abuts = a;
+        CompressorFactory(BiPredicate<V, V> e, LocalDateSegmentCombinator<V, V, V> c) {
             this.equals = e;
             this.combinator = c;
         }
 
         TimelineCompressor<V> get() {
-            return new TimelineCompressor<>(abuts, equals, combinator);
+            return new TimelineCompressor<>(equals, combinator);
         }
     }
 
